# Edee

./: .gitignore  CMakeLists.txt
plugins/example/: plugin.lua
plugins/example2/: plugin.lua
src/: content_panel.cpp  content_panel.h  edee.cpp  edee.h  graphics_backend.h  main.cpp  panel.h  plugin.cpp  plugin.h
src/opengl_backend/: CMakeLists.txt  opengl_backend.cpp  opengl_backend.h  shader.cpp  shader.h
src/opengl_backend/glad/: CMakeLists.txt
src/opengl_backend/glad/include/glad/: glad.h
src/opengl_backend/glad/src/: glad.c
